--- a/web/creator.html
+++ b/web/creator.html
@@ -25,7 +25,7 @@
       <br />
       <div id="sketchPadContainer"></div>
     </div>
-    <script src="js/draw.js"></script>
+    <script src="../common/draw.js"></script>
     <script src="js/sketchPad.js"></script>
 
     <script>
