--- a/web/viewer.html
+++ b/web/viewer.html
@@ -7,14 +7,21 @@
   </head>
   <body>
     <h1>Data Viewer</h1>
+    <div id="inoutContainer"></div>
     <div id="chartContainer"></div>
     <br /><br />
     <div id="container"></div>
     <script src="../common/js_objects/features.js"></script>
     <script src="../common/constants.js"></script>
+    <script src="../common/draw.js"></script>
     <script src="../common/utils.js"></script>
+
     <script src="js/display.js"></script>
-    <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="js/sketchPad.js"></script>
+
+    <script src="chart/graphics.js"></script>
+    <script src="chart/math.js"></script>
+    <script src="chart/chart.js"></script>
 
     <script>
       const { samples, featureNames } = features;
@@ -27,45 +34,22 @@
       }
 
       const options = {
-        width: 400,
-        height: 400,
-        hAxis: { title: featureNames[0] },
-        vAxis: { title: featureNames[0] },
-        legend: { position: 'none' },
-        explorer: {
-          actions: ['dragToZoom', 'rightClickToReset'],
-          maxZoomIn: 0.01,
-        },
+        size: 500,
+        axesLabels: featureNames,
+        styles: utils.styles,
+        transparency: 0.7,
+        icon: 'image',
       };
+      graphics.generateImages(utils.styles);
 
-      google.charts.load(
-        'current',
-        { 'packages': ['corechart', 'scatter',] },
+      const chart = new Chart(
+        chartContainer,
+        samples,
+        options,
+        handleClick,
       );
 
-      google.charts.setOnLoadCallback(() => {
-        const data = new google.visualization.DataTable();
-        data.addColumn('number', featureNames[0]);
-        data.addColumn('number', featureNames[1]);
-        data.addColumn({ 'type': 'string', 'role': 'style', });
-        data.addRows(samples.map(s => [
-          ...s.point,
-          utils.styles[s.label],
-        ]));
-
-        const chart = new google.visualization.
-          ScatterChart(chartContainer);
-        chart.draw(data, options);
-
-        /*
-        const chart = new google.charts.
-          Scatter(chartContainer);
-        chart.draw(
-          data,
-          google.charts.Scatter.convertOptions(options),
-        );
-        */
-      });
+      const sketchPad = new SketchPad(inputContainer);
     </script>
   </body>
 </html>
