--- a/web/viewer.html
+++ b/web/viewer.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Data Viewer</h1>
-    <div id="inoutContainer"></div>
+    <div id="inputContainer"></div>
     <div id="chartContainer"></div>
     <br /><br />
     <div id="container"></div>
