--- a/web/viewer.html
+++ b/web/viewer.html
@@ -9,11 +9,18 @@
     <h1>Data Viewer</h1>
     <div id="inputContainer"></div>
     <div id="chartContainer"></div>
+    <div id="controlPanel">
+      <button onClick="toggleInput()">
+        Toggle Input
+      </button>
+    </div>
     <br /><br />
     <div id="container"></div>
     <script src="../common/js_objects/features.js"></script>
+
     <script src="../common/constants.js"></script>
     <script src="../common/draw.js"></script>
+    <script src="../common/featureFunctions.js"></script>
     <script src="../common/utils.js"></script>
 
     <script src="js/display.js"></script>
@@ -49,7 +56,19 @@
         handleClick,
       );
 
-      const sketchPad = new SketchPad(inputContainer);
+      const onDrawingUpdate = (paths) => {
+        const point = [
+          featureFunctions.getPathCount(paths),
+          featureFunctions.getPointCount(paths)
+        ];
+        chart.showDynamicPoint(point);
+      };
+
+      const sketchPad =
+        new SketchPad(inputContainer, onDrawingUpdate);
+      sketchPad.canvas.style.cssText += `
+        outline: 100000px solid rgba(0, 0, 0, 0.7);
+      `;
     </script>
   </body>
 </html>
