--- a/web/viewer.html
+++ b/web/viewer.html
@@ -57,10 +57,12 @@
       );
 
       const onDrawingUpdate = (paths) => {
-        const point = [
-          featureFunctions.getPathCount(paths),
-          featureFunctions.getPointCount(paths)
-        ];
+        const functions = featureFunctions.inUse.map(f => f.function);
+        const point = functions.map(f => f(paths));
+        // const point = [
+        //   featureFunctions.getPathCount(paths),
+        //   featureFunctions.getPointCount(paths)
+        // ];
         chart.showDynamicPoint(point);
       };
 
