--- a/web/viewer.html
+++ b/web/viewer.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h1>Data Viewer</h1>
-    <div id="inputContainer"></div>
+    <div id="inputContainer">
+      <div id="predictedLabelContainer"></div>
+    </div>
     <div id="chartContainer"></div>
     <div id="controlPanel">
       <button onClick="toggleInput()">
@@ -56,6 +58,13 @@
         handleClick,
       );
 
+      const classify = (point) => {
+        const samplePoints = samples.map(s => s.point);
+        const index = utils.getNearest(point, samplePoints);
+        const nearestSample = samples[index];
+        return { label: nearestSample.label, nearestSample };
+      };
+
       const onDrawingUpdate = (paths) => {
         const functions = featureFunctions.inUse.map(f => f.function);
         const point = functions.map(f => f(paths));
@@ -63,7 +72,10 @@
         //   featureFunctions.getPathCount(paths),
         //   featureFunctions.getPointCount(paths)
         // ];
-        chart.showDynamicPoint(point);
+        const { label, nearestSample } = classify(point);
+        predictedLabelContainer.innerHTML =
+          `Is it a ${label}?`;
+        chart.showDynamicPoint(point, label, nearestSample);
       };
 
       const sketchPad =
