--- a/web/viewer.html
+++ b/web/viewer.html
@@ -12,7 +12,7 @@
     </div>
     <div id="chartContainer"></div>
     <div id="controlPanel">
-      <button onClick="toggleInput()">
+      <button onclick="toggleInput()">
         Toggle Input
       </button>
     </div>
