--- a/web/viewer.html
+++ b/web/viewer.html
@@ -66,12 +66,16 @@
       };
 
       const onDrawingUpdate = (paths) => {
+        /**
+         * Replacing this with featureFunctions.inUse[]:
+         *    Chain of resposibility ???
+            const point = [
+              featureFunctions.getPathCount(paths),
+              featureFunctions.getPointCount(paths)
+            ];
+        */
         const functions = featureFunctions.inUse.map(f => f.function);
         const point = functions.map(f => f(paths));
-        // const point = [
-        //   featureFunctions.getPathCount(paths),
-        //   featureFunctions.getPointCount(paths)
-        // ];
         const { label, nearestSample } = classify(point);
         predictedLabelContainer.innerHTML =
           `Is it a ${label}?`;
